--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="/public/css/reset.css">
   <link rel="stylesheet" href="/public/css/style.css">
   <script src="/public/js/toast.js"></script>
-  <script src="/public/js/script.js"></script>
+  <script src="/public/js/helpers.js"></script>
+  <script type="module" src="/public/js/script.js"></script>
 </head>
 
 <body>
