--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -1,5 +1,5 @@
 <header>
-  <p>Learn to Read</p>
+  <div class="branding"><img src="/public/images/logo.png" alt="Logo" /></div>
   <nav>
     <button>Hjem</button>
   </nav>
