--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -2,6 +2,11 @@
 @component('components/layouts/main', {title: 'Home'})
 
 {{-- Main slot (unnamed) --}}
-<h1>Funker dette?</h1>
-<p>Jadda! 😎</p>
+<section>
+  <h1>Velkommen til Lær å lese på nettet 😎</h1>
+  <p>Les ordet og trykk på knappen for å gå til neste ord</p>
+</section>
+
+@include('partials/reader')
+
 @end
