Update home page text, replace button with a wordlist selector; enhance styles and JS to support wordlist functionality

--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -4,7 +4,7 @@
 {{-- Main slot (unnamed) --}}
 <section>
   <h1>Velkommen til Lær å lese på nettet 😎</h1>
-  <p>Les ordet og trykk på knappen for å gå til neste ord</p>
+  <p>Les ordene og trykk på knappen for å gå til neste ord</p>
 </section>
 
 @include('partials/reader')
