--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -1,6 +1,10 @@
 <header>
   <div class="branding"><img src="/public/images/logo.png" alt="Logo" /></div>
   <nav>
-    <button>Hjem</button>
+    <select class="text-lg" name="wordlist" id="wordlist">
+      <option value="no-short.json">Norsk (3-5 bokstaver)</option>
+      <option value="no-long.json">Norsk (5-10 bokstaver)</option>
+      <option value="no-pairs.json">Norsk (ordpar)</option>
+    </select>
   </nav>
 </header>
