--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -1,7 +1,7 @@
 <header>
   <div class="branding"><img src="/public/images/logo.png" alt="Logo" /></div>
   <nav>
-    <select class="text-lg" name="wordlist" id="wordlist">
+    <select class="wordlist-picker" name="wordlist" id="wordlist">
       <option value="no-short.json">Norsk (3-5 bokstaver)</option>
       <option value="no-long.json">Norsk (5-10 bokstaver)</option>
       <option value="no-pairs.json">Norsk (ordpar)</option>
