--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -1,12 +1,14 @@
 {{-- Use the layout component and pass data --}}
-@component('components/layouts/main', {title: 'Home'})
+@component('components/layouts/main', {title: '😎'})
 
 {{-- Main slot (unnamed) --}}
 <section>
-  <h1>Velkommen til Lær å lese på nettet 😎</h1>
+  <h1 class="text-xlg">Velkommen til Lær å lese på nettet 😎</h1>
   <p>Les ordene og trykk på knappen for å gå til neste ord</p>
 </section>
 
-@include('partials/reader')
+<section class="bg-accent">
+  @include('partials/reader')
+</section>
 
 @end
