--- a/lib/public/css/style.css
+++ b/lib/public/css/style.css
@@ -1,5 +1,6 @@
 :root {
-  --page-max-width: 1280px;
+  --page-max-width : 1280px;
+  --bg-accent-color: #c0dac4;
 }
 
 body {
@@ -49,7 +50,11 @@ footer {
 }
 
 section {
-  padding-block: 2rem;
+  padding-block: clamp(1rem, 5vw, 4rem);
+}
+
+.bg-accent {
+  background-color: var(--bg-accent-color);
 }
 
 /* NAV Special button */
