Change site title to "Ordmester.no 😎", update header logo, and enhance layout for home view; add text-center CSS class

--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -1,9 +1,10 @@
 {{-- Use the layout component and pass data --}}
-@component('components/layouts/main', {title: '😎'})
+@component('components/layouts/main', {})
 
 {{-- Main slot (unnamed) --}}
-<section>
-  <h1 class="text-xlg">Velkommen til Lær å lese på nettet 😎</h1>
+<section class="text-center">
+  <h1 class="text-xlg">Velkommen til Ordmester.no 😎</h1>
+  <h2>Bli en mester du også!</h2>
   <p>Les ordene og trykk på knappen for å gå til neste ord</p>
 </section>
 
