--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -1,5 +1,5 @@
 <header>
-  <div class="branding"><img src="/public/images/logo.png" alt="Logo" /></div>
+  <div class="branding"><img src="/public/images/logo.png" alt="Ordmester.no" /></div>
   <nav>
     <select class="wordlist-picker" name="wordlist" id="wordlist">
       <option value="no-short.json">Norsk (3-5 bokstaver)</option>
