Added language control and TTS

--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -5,8 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ordmester.no 😎</title>
+  {{-- Font Awesome --}}
+  <link rel="stylesheet" href="/public/fonts/css/fontawesome.min.css">
+  <link rel="stylesheet" href="/public/fonts/css/sharp-regular.min.css">
+  <link rel="stylesheet" href="/public/fonts/css/sharp-solid.min.css">
   <link rel="stylesheet" href="/public/css/reset.css">
   <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="stylesheet" href="/public/css/toast.css">
   <script src="/public/js/toast.js"></script>
   <script src="/public/js/helpers.js"></script>
   <script type="module" src="/public/js/script.js"></script>
