--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -20,8 +20,8 @@
 
 <div class="reader">
   <p id="word" class="word uppercase"></p>
-  <div class="flex">
+  <div class="flex gap-2">
     <button onclick="setNextWord()" class="uppercase">Neste</button>
-    <button onclick="speak()" class="uppercase"></button>
+    <button onclick="speak()" class="uppercase"><i class="fa-sharp fa-solid fa-volume-high"></i></button>
   </div>
 </div>
