--- a/lib/public/css/style.css
+++ b/lib/public/css/style.css
@@ -118,6 +118,90 @@ select {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
+.gap-1 {
+  gap: 0.5rem;
+}
+
+.gap-2 {
+  gap: 1rem;
+}
+
+.gap-3 {
+  gap: 1.5rem;
+}
+
+.gap-4 {
+  gap: 2rem;
+}
+
+.px-1 {
+  padding-inline: 0.5rem;
+}
+
+.px-2 {
+  padding-inline: 1rem;
+}
+
+.px-3 {
+  padding-inline: 2rem;
+}
+
+.px-4 {
+  padding-inline: 4rem;
+}
+
+.py-1 {
+  padding-block: 0.5rem;
+}
+
+.py-2 {
+  padding-block: 1rem;
+}
+
+.py-3 {
+  padding-block: 2rem;
+}
+
+.py-4 {
+  padding-block: 4rem;
+}
+
+.mx-1 {
+  margin-inline: 0.5rem;
+}
+
+.mx-2 {
+  margin-inline: 1rem;
+}
+
+.mx-3 {
+  margin-inline: 2rem;
+}
+
+.mx-4 {
+  margin-inline: 4rem;
+}
+
+.my-1 {
+  margin-block: 0.5rem;
+}
+
+.my-2 {
+  margin-block: 1rem;
+}
+
+.my-3 {
+  margin-block: 2rem;
+}
+
+.my-4 {
+  margin-block: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
