Refined homepage content and layout; adjusted CSS variables for better styling and responsiveness

--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -3,9 +3,10 @@
 
 {{-- Main slot (unnamed) --}}
 <section class="text-center">
-  <h1 class="text-xlg">Velkommen til Ordmester.no 😎</h1>
-  <h2>Bli en mester du også!</h2>
-  <p>Les ordene og trykk på knappen for å gå til neste ord</p>
+  <div class="mw-800 mx-auto">
+    <h1 class="text-xlg">Velkommen til Ordmester.no 😎</h1>
+    <p class="text-lg"><b>Vil du bli en ordmester?</b> Les ordene høyt. Trykk så på høyttaleren for å høre hvordan ordene skal sies. Når du er ferdig, trykker du på "NESTE".</p>
+  </div>
 </section>
 
 <section class="bg-accent">
