--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -9,6 +9,7 @@
       font-size: min(5rem, 18vw);
       font-family: Neucha, sans-serif;
       line-height: 1;
+      word-spacing: 20px;
     }
 
     & button {
