Added manifest and favicons

--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -5,13 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ordmester.no 😎</title>
+
+  {{-- Favicons --}}
+  <link rel="apple-touch-icon" sizes="180x180" href="/public/images/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/images/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/public/images/fav/favicon-16x16.png">
+  <link rel="manifest" href="/public/misc/site.webmanifest" />
+
   {{-- Font Awesome --}}
   <link rel="stylesheet" href="/public/fonts/css/fontawesome.min.css">
   <link rel="stylesheet" href="/public/fonts/css/sharp-regular.min.css">
   <link rel="stylesheet" href="/public/fonts/css/sharp-solid.min.css">
+
+  {{-- CSS --}}
   <link rel="stylesheet" href="/public/css/reset.css">
   <link rel="stylesheet" href="/public/css/style.css">
   <link rel="stylesheet" href="/public/css/toast.css">
+
+  {{-- JS --}}
   <script src="/public/js/toast.js"></script>
   <script src="/public/js/helpers.js"></script>
   <script type="module" src="/public/js/script.js"></script>
