Added function for sounding letter by letter

--- a/lib/edge/views/home.edge
+++ b/lib/edge/views/home.edge
@@ -7,6 +7,7 @@
   <div class="mw-800 mx-auto">
     <h1 class="text-xlg">Velkommen til Ordmester.no 😎</h1>
     <p class="text-lg"><b>Vil du bli en ordmester?</b> Les ordene høyt. Trykk så på høyttaleren for å høre hvordan ordene skal sies. Når du er ferdig, trykker du på "NESTE".</p>
+    <p class="text-lg mt-2">PS! Du kan også trykke på en bokstav for å høre hva den heter.</p>
   </div>
 </section>
 
