Added google analytics

--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -26,6 +26,9 @@
   <script src="/public/js/toast.js"></script>
   <script src="/public/js/helpers.js"></script>
   <script type="module" src="/public/js/script.js"></script>
+
+  {{-- Google analytics --}}
+  @include('partials/header')
 </head>
 
 <body>
