--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -28,7 +28,7 @@
   <script type="module" src="/public/js/script.js"></script>
 
   {{-- Google analytics --}}
-  @include('partials/header')
+  @include('partials/gtag')
 </head>
 
 <body>
