--- a/lib/edge/views/components/layouts/main.edge
+++ b/lib/edge/views/components/layouts/main.edge
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ordmester.no 😎</title>
 
+  {{-- Open Graph --}}
+  @include('partials/openGraph')
+
   {{-- Favicons --}}
-  <link rel="apple-touch-icon" sizes="180x180" href="/public/images/fav/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/public/images/fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/public/images/fav/favicon-16x16.png">
-  <link rel="manifest" href="/public/misc/site.webmanifest" />
+  @include('partials/favicons')
 
   {{-- Font Awesome --}}
   <link rel="stylesheet" href="/public/fonts/css/fontawesome.min.css">
