Refactor hover styles in reader partial to simplify CSS and enhance readability of style definitions

--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -19,8 +19,7 @@
       & span {
         cursor: pointer;
 
-        &:hover,
-        &:active {
+        &:hover {
           color: var(--first-color);
         }
       }
