--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -1,12 +1,6 @@
 <header>
   <div class="branding"><img src="/public/images/logo.png" alt="Ordmester.no" /></div>
   <nav>
-    <select class="wordlist-picker" name="wordlist" id="wordlist">
-      <option value="no-letters.json">Norsk (bokstaver)</option>
-      <option value="no-0-100.json">Norsk (0-100)</option>
-      <option value="no-short.json" selected>Norsk (3-5 bokstaver)</option>
-      <option value="no-long.json">Norsk (5-10 bokstaver)</option>
-      <option value="no-pairs.json">Norsk (ordpar)</option>
-    </select>
+    @include('partials/listPicker')
   </nav>
 </header>
