--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -3,8 +3,9 @@
     <option value="no-letters.json">Bokstaver</option>
     <option value="no-short.json" selected>Korte ord</option>
     <option value="no-long.json">Lange ord</option>
-    <option value="no-common.json">Mest brukte ord</option>
+    <option value="no-common.json">Vanlige ord</option>
     <option value="no-pairs.json">Ordpar</option>
+    <option value="no-short-phrases.json">Korte setninger</option>
   </optgroup>
   <optgroup label="Norske tall">
     <option value="no-0-10.json">0-10</option>
