--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -1,14 +1,21 @@
 <select class="wordlist-picker" name="wordlist" id="wordlist">
-  <optgroup label="Norske ord">
+  <optgroup label="Norsk">
     <option value="no-letters.json">Bokstaver</option>
     <option value="no-short.json" selected>Korte ord</option>
     <option value="no-long.json">Lange ord</option>
     <option value="no-common.json">Vanlige ord</option>
     <option value="no-pairs.json">Ordpar</option>
     <option value="no-short-phrases.json">Korte setninger</option>
+    <option value="no-0-10.json">Tall (0-10)</option>
+    <option value="no-0-100.json">Tall (0-100)</option>
   </optgroup>
-  <optgroup label="Norske tall">
-    <option value="no-0-10.json">0-10</option>
-    <option value="no-0-100.json">0-100</option>
+  <optgroup label="Engelsk">
+    <option value="en-letters.json">Bokstaver</option>
+    <option value="en-short.json" selected>Korte ord</option>
+    <option value="en-long.json">Lange ord</option>
+    <option value="en-common.json">Vanlige ord</option>
+    <option value="en-short-phrases.json">Korte setninger</option>
+    <option value="en-0-10.json">Tall (0-10)</option>
+    <option value="en-0-100.json">Tall (0-100)</option>
   </optgroup>
 </select>
