--- a/lib/public/css/style.css
+++ b/lib/public/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --page-max-width   : 1280px;
-  --bg-color         : #f8f9f5;
-  --bg-accent-color  : #a2c3c8;
+  --bg-color         : #a2c3c8;
+  --bg-accent-color  : #f8f9f5;
   --bg-headfoot-color: #273f43;
   --bg-headfoot-text : #ffffff;
   --text-color       : #222222;
