Change background color variable in style.css for refreshed visual aesthetics and improved design coherence

--- a/lib/public/css/style.css
+++ b/lib/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --page-max-width   : 1280px;
-  --bg-color         : #a2c3c8;
+  --bg-color         : #bfd5d9;
   --bg-accent-color  : #f8f9f5;
   --bg-headfoot-color: #273f43;
   --bg-headfoot-text : #ffffff;
