--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -6,6 +6,7 @@
     gap: 1rem;
 
     & .word {
+      font-size: 5rem;
       font-size: min(5rem, 15vw);
       line-height: 1;
       word-spacing: 5px;
