Added uppercase switch

--- a/lib/edge/views/partials/header.edge
+++ b/lib/edge/views/partials/header.edge
@@ -2,5 +2,6 @@
   <div class="branding"><img src="/public/images/logo.png" alt="Ordmester.no" /></div>
   <nav>
     @include('partials/listPicker')
+    @include('partials/caseSelect')
   </nav>
 </header>
