--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -11,7 +11,7 @@
   </optgroup>
   <optgroup label="Engelsk">
     <option value="en-letters.json">Bokstaver</option>
-    <option value="en-short.json" selected>Korte ord</option>
+    <option value="en-short.json">Korte ord</option>
     <option value="en-long.json">Lange ord</option>
     <option value="en-common.json">Vanlige ord</option>
     <option value="en-short-phrases.json">Korte setninger</option>
