--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -6,6 +6,7 @@
     <option value="no-common.json">Vanlige ord</option>
     <option value="no-pairs.json">Ordpar</option>
     <option value="no-short-phrases.json">Korte setninger</option>
+    <option value="no-facts.json">Korte fakta</option>
     <option value="no-0-10.json">Tall (0-10)</option>
     <option value="no-0-100.json">Tall (0-100)</option>
   </optgroup>
@@ -15,6 +16,7 @@
     <option value="en-long.json">Lange ord</option>
     <option value="en-common.json">Vanlige ord</option>
     <option value="en-short-phrases.json">Korte setninger</option>
+    <option value="en-facts.json">Korte fakta</option>
     <option value="en-0-10.json">Tall (0-10)</option>
     <option value="en-0-100.json">Tall (0-100)</option>
   </optgroup>
