--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -20,4 +20,8 @@
     <option value="en-0-10.json">Tall (0-10)</option>
     <option value="en-0-100.json">Tall (0-100)</option>
   </optgroup>
+  <optgroup label="Mattematikk">
+    <option value="math-addition-10.json">Addisjon</option>
+    <option value="math-subtraction-10.json">Subtraksjon</option>
+  </optgroup>
 </select>
