--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -77,6 +77,7 @@
 <div class="reader">
   <p id="word" class="word"></p>
   <div id="options" class="options" data-type="options"></div>
+  <p>Poeng: <b id="points">0</b></p>
   <div class="controls">
     <button onclick="setNextWord()" class="uppercase">Neste</button>
     <button onclick="speak()" class="uppercase"><i class="fa-sharp fa-solid fa-volume-high"></i></button>
