--- a/lib/public/css/style.scss
+++ b/lib/public/css/style.scss
@@ -107,13 +107,18 @@ select {
     padding-right      : 1.5rem;
   }
 
-  &:not(select):hover {
+  &:not(select, [disabled]):hover {
     box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
     transform : translate3d(0, 2px, 0);
   }
 
   &:focus {
     box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+  }
+
+  &[disabled] {
+    cursor : not-allowed;
+    opacity: 0.5;
   }
 }
 
