Added more math

--- a/lib/edge/views/partials/listPicker.edge
+++ b/lib/edge/views/partials/listPicker.edge
@@ -7,8 +7,19 @@
     <option value="no-pairs.json">Ordpar</option>
     <option value="no-short-phrases.json">Korte setninger</option>
     <option value="no-facts.json">Korte fakta</option>
+  </optgroup>
+  <optgroup label="Matematikk">
     <option value="no-0-10.json">Tall (0-10)</option>
     <option value="no-0-100.json">Tall (0-100)</option>
+    <option value="math-addition-10.json">Addisjon (0-10)</option>
+    <option value="math-addition-20.json">Addisjon (10-20)</option>
+    <option value="math-addition-50.json">Addisjon (20-50)</option>
+    <option value="math-subtraction-10.json">Subtraksjon (0-10)</option>
+    <option value="math-subtraction-20.json">Subtraksjon (10-20)</option>
+    <option value="math-subtraction-50.json">Subtraksjon (20-50)</option>
+    <option value="math-add-sub-10.json">Miks (0-10)</option>
+    <option value="math-add-sub-20.json">Miks (10-20)</option>
+    <option value="math-add-sub-50.json">Miks (20-50)</option>
   </optgroup>
   <optgroup label="Engelsk">
     <option value="en-letters.json">Bokstaver</option>
@@ -19,9 +30,5 @@
     <option value="en-facts.json">Korte fakta</option>
     <option value="en-0-10.json">Tall (0-10)</option>
     <option value="en-0-100.json">Tall (0-100)</option>
-  </optgroup>
-  <optgroup label="Mattematikk">
-    <option value="math-addition-10.json">Addisjon</option>
-    <option value="math-subtraction-10.json">Subtraksjon</option>
   </optgroup>
 </select>
