Style updates: Adjusted font size for points display in reader view

--- a/lib/edge/views/partials/reader.edge
+++ b/lib/edge/views/partials/reader.edge
@@ -67,6 +67,10 @@
       }
     }
 
+    & .points {
+      font-size: 1.2rem;
+    }
+
     & .controls {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -82,7 +86,7 @@
 <div class="reader">
   <p id="word" class="word"></p>
   <div id="options" class="options" data-type="options"></div>
-  <p>Poeng: <b id="points">0</b></p>
+  <p class="points">Poeng: <b id="points">0</b></p>
   <div class="controls">
     <button onclick="setNextWord()" class="uppercase">Neste</button>
     <button onclick="speak(dqs('#word').textContent)" class="uppercase"><i class="fa-sharp fa-solid fa-volume-high"></i></button>
